--- a/app/app/src/main/res/layout/activity_user_area.xml
+++ b/app/app/src/main/res/layout/activity_user_area.xml
@@ -14,8 +14,8 @@
 
         <ImageButton
             android:id="@+id/botonmenu_userarea"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="55dp"
+            android:layout_height="40dp"
             android:layout_marginStart="20dp"
             android:background="#00FFFFFF"
             android:onClick="clickbotonmenu"
@@ -23,12 +23,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.65"
-            app:srcCompat="@drawable/ic_baseline_menu_40" />
+            app:srcCompat="@drawable/menu" />
 
         <ImageView
             android:id="@+id/imageView4"
-            android:layout_width="59dp"
-            android:layout_height="53dp"
+            android:layout_width="58dp"
+            android:layout_height="51dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/imageView6"
             app:layout_constraintStart_toEndOf="@+id/botonmenu_userarea"
@@ -39,19 +39,18 @@
 
         <ImageView
             android:id="@+id/imageView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="48dp"
+            android:layout_height="40dp"
             android:layout_marginEnd="20dp"
             android:onClick="logoutbutton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.65"
-            app:srcCompat="@drawable/ic_baseline_logout_40" />
+            app:srcCompat="@drawable/logout" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
     <TextView
         android:id="@+id/iddispositivouser"
         android:layout_width="wrap_content"
@@ -126,7 +125,7 @@
         android:layout_width="208dp"
         android:layout_height="0dp"
         android:background="@color/black"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
@@ -142,7 +141,7 @@
             android:text="CONTACTANOS"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
         <TextView
             android:id="@+id/textView15"
@@ -194,114 +193,75 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <!--
-    <Button
-        android:id="@+id/botonbluet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="144dp"
-        android:background="@drawable/boton_redondo"
-        android:fontFamily="@font/quicksandmedium"
-        android:onClick="botonbluetpulsado"
-        android:text="Conectar"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/quicksandmedium"
-        android:text="No estás conectado con el dispositivo"
-        app:layout_constraintBottom_toTopOf="@+id/botonbluet"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-        app:layout_constraintVertical_bias="0.544" />
-
-    <TextView
-        android:id="@+id/nombreUsuarioActivity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:text="USUARIO"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
--->
-
-    <!--
-        <Button
-            android:id="@+id/botonBuscarDispositivosBTLE"
+        <TextView
+            android:id="@+id/textView12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="botonBuscarDispositivosBTLEPulsado"
-            android:text="Buscar Dispositivos BTLE nou 4"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="32dp"
+            android:fontFamily="@font/quicksandmedium"
+            android:onClick="botonuserarea"
+            android:text="AREA USUARIO"
+            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/botonDetenerBusquedaDispositivosBTLE"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="botonDetenerBusquedaDispositivosBTLEPulsado"
-            android:text="Detener búsaqueda Dispositivos BTLE"
-            app:layout_constraintEnd_toEndOf="parent"
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="55dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="8dp"
+            android:onClick="gasesnocivos"
+            app:layout_constraintBottom_toBottomOf="@+id/textView17"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/botonBuscarDispositivosBTLE" />
+            app:layout_constraintTop_toTopOf="@+id/textView17"
+            app:srcCompat="@drawable/datos" />
 
-        <Button
-            android:id="@+id/botonBuscarNuestroDispositivoBTLE"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="botonBuscarNuestroDispositivoBTLEPulsado"
-            android:text="Buscar nuestro dispositivo  BTLE"
-            app:layout_constraintEnd_toEndOf="parent"
+        <ImageView
+            android:id="@+id/imageView9"
+            android:layout_width="36dp"
+            android:layout_height="33dp"
+            android:layout_marginStart="16dp"
+            android:onClick="botoncontactanos"
+            app:layout_constraintBottom_toBottomOf="@+id/textView11"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/botonDetenerBusquedaDispositivosBTLE" />
+            app:layout_constraintTop_toTopOf="@+id/textView11"
+            app:srcCompat="@drawable/ic_baseline_mail_outline_24" />
 
-        <TextView
-            android:id="@+id/textoamostrar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+        <ImageView
+            android:id="@+id/imageView12"
+            android:layout_width="36dp"
+            android:layout_height="33dp"
+            android:layout_marginStart="16dp"
+            android:onClick="botoncontactanos"
+            app:layout_constraintBottom_toBottomOf="@+id/textView15"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/botonfake" />
+            app:layout_constraintTop_toTopOf="@+id/textView15"
+            app:srcCompat="@drawable/ic_baseline_edit_24" />
 
-        <Button
-            android:id="@+id/botonEnviar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#4CAF50"
-            android:onClick="boton_enviar_pulsado"
-            android:text="Enviar Medida Real"
-            app:layout_constraintEnd_toEndOf="parent"
+        <ImageView
+            android:id="@+id/imageView14"
+            android:layout_width="36dp"
+            android:layout_height="33dp"
+            android:layout_marginStart="16dp"
+            android:onClick="vinculardispo"
+            app:layout_constraintBottom_toBottomOf="@+id/textView16"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/botonBuscarNuestroDispositivoBTLE" />
+            app:layout_constraintTop_toTopOf="@+id/textView16"
+            app:srcCompat="@drawable/ic_baseline_battery_0_bar_24" />
 
-        <Button
-            android:id="@+id/botonfake"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#9C2D2D"
-            android:onClick="boton_enviar_fake"
-            android:text="Enviar Medida Fake"
-            app:layout_constraintEnd_toEndOf="parent"
+        <ImageView
+            android:id="@+id/imageView16"
+            android:layout_width="36dp"
+            android:layout_height="33dp"
+            android:layout_marginStart="16dp"
+            android:onClick="botonuserarea"
+            app:layout_constraintBottom_toBottomOf="@+id/textView12"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/botonEnviar"
-            app:rippleColor="#A5A5A5"
-            app:strokeColor="#FFFFFF" />
+            app:layout_constraintTop_toTopOf="@+id/textView12"
+            app:srcCompat="@drawable/ic_baseline_account_circle_24" />
 
-            -->
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
