--- a/app/app/src/main/res/layout/activity_edit_user.xml
+++ b/app/app/src/main/res/layout/activity_edit_user.xml
@@ -139,6 +139,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
+        android:fontFamily="@font/quicksandmedium"
         android:onClick="botoncambiarcontra"
         android:text="Cambiar contraseña"
         android:textColor="@color/black"
