--- a/app/app/src/main/res/layout/activity_login.xml
+++ b/app/app/src/main/res/layout/activity_login.xml
@@ -18,8 +18,8 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="319dp"
-            android:layout_height="424dp"
+            android:layout_width="316dp"
+            android:layout_height="436dp"
             app:srcCompat="@drawable/imagenlogin" />
 
         <TextView
@@ -70,6 +70,7 @@
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="96dp"
             android:background="@drawable/boton_redondo"
             android:fontFamily="@font/quicksandmedium"
             android:onClick="botonentrar"
@@ -77,6 +78,7 @@
             android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/recordarsesioncheck"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.523"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edittextpass" />
 
@@ -84,11 +86,20 @@
             android:id="@+id/recordarsesioncheck"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/quicksandmedium"
             android:text="Recuerdame"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+            app:layout_constraintBottom_toTopOf="@+id/textView14"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/recordarsesioncheck"
+            app:layout_constraintStart_toStartOf="@+id/recordarsesioncheck" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
