--- a/app/app/src/main/res/layout/activity_vincular_dispo.xml
+++ b/app/app/src/main/res/layout/activity_vincular_dispo.xml
@@ -214,6 +214,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:fontFamily="@font/quicksandmedium"
         android:text="Escanear código QR"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -238,6 +239,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:ems="10"
+        android:fontFamily="@font/quicksandmedium"
         android:singleLine="false"
         android:text="Id del dispositivo: "
         android:textColor="@color/black"
