--- a/app/app/src/main/res/xml/network_security_config.xml
+++ b/app/app/src/main/res/xml/network_security_config.xml
@@ -9,6 +9,7 @@
         <domain includeSubdomains="true">192.168.1.65</domain>
         <domain includeSubdomains="true">192.168.43.79</domain>
         <domain includeSubdomains="true">172.20.10.5</domain>
+        <domain includeSubdomains="true">172.20.10.15</domain>
 
 
 
