--- a/app/app/src/main/res/xml/network_security_config.xml
+++ b/app/app/src/main/res/xml/network_security_config.xml
@@ -3,7 +3,7 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">localhost</domain>
         <domain includeSubdomains="true">192.168.1.131</domain>
-        <domain includeSubdomains="true">192.168.0.14</domain>
+        <domain includeSubdomains="true">192.168.0.14</domain>ok
         <domain includeSubdomains="true">172.20.10.2</domain>
         <domain includeSubdomains="true">192.168.1.166</domain>
         <domain includeSubdomains="true">192.168.1.65</domain>
