--- a/app/app/src/main/res/layout/activity_contactar.xml
+++ b/app/app/src/main/res/layout/activity_contactar.xml
@@ -206,8 +206,8 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="32dp"
             android:fontFamily="@font/quicksandmedium"
-            android:onClick="vinculardispo"
-            android:text="VINCULAR\n TRACKER"
+            android:onClick="mis_sensores"
+            android:text="MIS SENSORES"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView15" />
@@ -287,7 +287,7 @@
             android:layout_width="36dp"
             android:layout_height="33dp"
             android:layout_marginStart="16dp"
-            android:onClick="vinculardispo"
+            android:onClick="mis_sensores"
             app:layout_constraintBottom_toBottomOf="@+id/textView16"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/textView16"
