--- a/app/app/src/main/res/layout/activity_select_sensor.xml
+++ b/app/app/src/main/res/layout/activity_select_sensor.xml
@@ -57,7 +57,7 @@
         android:layout_width="208dp"
         android:layout_height="0dp"
         android:background="@color/black"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
