--- a/app/app/src/main/res/layout/activity_contactar.xml
+++ b/app/app/src/main/res/layout/activity_contactar.xml
@@ -71,6 +71,7 @@
             android:layout_marginBottom="10dp"
             android:fontFamily="@font/quicksandmedium"
             android:text="Correo"
+            android:inputType="textEmailAddress"
             android:textColor="@color/black" />
 
         <EditText
@@ -305,6 +306,7 @@
             app:srcCompat="@drawable/ic_baseline_account_circle_24" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
 
