valor absoluto y cambio textfields

--- a/app/app/src/main/res/layout/activity_contactar.xml
+++ b/app/app/src/main/res/layout/activity_contactar.xml
@@ -71,6 +71,7 @@
             android:layout_marginBottom="10dp"
             android:fontFamily="@font/quicksandmedium"
             android:text="Correo"
+            android:inputType="textEmailAddress"
             android:textColor="@color/black" />
 
         <EditText
